fix: overflow problems and intersecting items.
-Change the body behaviour, overflow:hidden to overflow-x:hidden.

-I deleted the h-screen and h-dvh attribute on the intro section and the stack to h-fit.

-Added pb-20 and pt-20 to the intro section.

-I´m gonna make some changes to the behaviour of each stack element.

--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@
 
   body {
     font-family: var(--font-family-host);
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
 
